# hierarhical_data

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml
data/: admin.py  forms.py  models.py  views.py
data/migrations/: 0001_initial.py  0002_data_date.py
dataowner/: admin.py  apps.py  forms.py  models.py  views.py
dataowner/migrations/: 0001_initial.py
hierarhical/: settings.py  urls.py  wsgi.py
templates/: base.html  index.html
